{
    "name": "PlayerController",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "54f48b39-8c68-45ba-8b62-bc5ffbcd1e04",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "082d1645-159d-4027-8849-e6ee53a7126e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b46de318-b82c-4448-bd98-4ff61a72099f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Skill",
                    "type": "Button",
                    "id": "f13d5f52-42ba-4434-92ea-d63b9d8e5b26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc9da9d3-3ca8-4cec-ba0e-44903ff039c2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left&Right",
                    "id": "5ce18ee3-71fa-4967-a253-4261e0984463",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "7cfee6d3-2ddc-474a-88de-e291c7a54587",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "935bfce9-71d6-4126-878a-36c6da7f66c7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0bf05285-f1f6-4f3f-a6f9-199218fe30e1",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MobileActions",
            "id": "36977d6e-e1d4-4ca6-971d-43cb0d2852f4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "7dad3e51-049a-430a-839f-590f5eceb2a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move1",
                    "type": "Value",
                    "id": "0c23d90f-8431-422f-960f-7834dad46d99",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "689e8b1d-5f5f-40ba-95e8-3b013ede1d1f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f5482ef-33bf-4c70-9eee-8287c3367607",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}